fix: color space

--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -1,9 +1,10 @@
 // Palette Color
 $color-primary: #0075ff;
 $color-secondary: #444655;
-$color-space: #a9aabc;
+$color-space: #00DAF2;
 $color-accent: #f01c54;
 $color-dark: #af0028;
 
 // sizing page
 $default-height: 100vh;
+$nav-height: 10vh;
