feat: add some global css

--- a/src/assets/style/globalStyle.scss
+++ b/src/assets/style/globalStyle.scss
@@ -8,7 +8,6 @@
   transform: translateX(300px);
 }
 
-
 .slide-visa-enter-active,
 .slide-visa-leave-active {
   transition: all ease-in-out 1s;
@@ -19,7 +18,6 @@
   transform: translateX(800px);
 }
 
-
 .slide-view-enter-active,
 .slide-view-leave-active {
   transition: all ease-in-out 1s;
@@ -29,4 +27,33 @@
 .slide-view-leave-to {
   transform: translateX(300px);
   opacity: 0;
+}
+
+input,
+button,
+textarea {
+  outline: none;
+  border: none;
+}
+
+.fa-exclamation-circle {
+  color: red;
+}
+
+.fa-check {
+  color: green;
+}
+
+@keyframes spinner {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.fa-spinner {
+  animation: spinner 1s linear infinite;
 }
